--- a/views/super/hostel.ejs
+++ b/views/super/hostel.ejs
@@ -1,82 +1,245 @@
 <!DOCTYPE html>
+
+<style>
+
+  button, .bt {
+    box-shadow: 0px 5px 0px 0px #282828;
+    background:linear-gradient(to bottom, #eae0c2 5%, #ccc2a6 100%);
+    background-color:#ebdbb2;
+    border-radius:15px;
+    border:2px solid #282828;
+    cursor:pointer;
+    color:#32302f;
+    font-family: 'Montserrat';
+    font-size:20px;
+    padding:12px 20px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #ffffff;
+    width: 200px;
+  }
+  button, .bt:hover {
+    background:linear-gradient(to bottom, #ccc2a6 5%, #ebdbb2 100%);
+    background-color:#ebdbb2;
+  }
+
+  input[type=text] {
+    font-family: 'Montserrat';
+    font-size:20px;
+    padding: 12px 16px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    background-color:#32302f;
+    border:1px solid #ebdbb2;
+    color: #ebdbb2;
+    border-radius:20px;
+    width: 400px;
+
+  }
+
+  form{
+    margin-top: 0px;
+    margin-left: 300px;
+  }
+
+  #dashboard{
+    margin-top: 50px;
+    margin-left: 30px;
+    width: 1000px;
+    height: 600px;
+    padding: 10px;
+    border: 2px solid #ebdbb2;
+    border-radius: 15px;
+    background-color: #282828;
+    overflow-y:auto;
+  }
+
+  #photo{
+    width: 200px; 
+    height: 200px; 
+    margin-top: 125px; 
+    margin-left: 60px;
+    border-radius: 15px;
+  }
+
+  #info{ 
+    font-family: 'Montserrat';
+    font-size:20px;
+    width:200px;
+    height: 100px; 
+    margin-top: 0; 
+    margin-left: 0;
+  }
+
+  #label{
+    font-size:20px;
+    font-weight: 600;
+  }
+
+  td{
+    min-width: 150px;
+    padding: 0px 20px 0px 20px;
+  }
+
+  input{
+    text-align: center;
+  }
+
+  tr#label:hover {
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+
+  a{
+    text-decoration: none;
+  }
+
+  bt{
+    width: 200px; 
+    height: 200px; 
+    margin-top: 125px; 
+    margin-left: 60px;
+    border-radius: 15px;
+  }
+
+</style>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hostel Edit</title>
   </head>
 
-  <body style="color: white;">
-    <!-- Hostel No. -->
-    <p>Hostel No.: <%=hostel_number%></p>
-    <!-- Other Info -->
-    <form action="./hostel" method="POST">
-      <label for="hostel_name">
-        Hostel Name:
-        <input
-          type="text"
-          value="<%=hostel_name%>"
-          name="hostel_name"
-          required
-        />
-      </label>
-      <label for="boys_girls">
-        Boy's Hostel or Girl's Hostel:
-        <input type="text" value="<%=boys_girls%>" name="boys_girls" required />
-      </label>
-      <label for="rooms">
-        No. of rooms:
-        <input type="text" value="<%=rooms%>" name="rooms" required />
-      </label>
-      <label for="day_supervisor">
-        Day Supervisor:
-        <input
-          type="text"
-          value="<%=day_supervisor%>"
-          name="day_supervisor"
-          required
-        />
-      </label>
-      <label for="evening_supervisor">
-        Evening Supervisor:
-        <input
-          type="text"
-          value="<%=evening_supervisor%>"
-          name="evening_supervisor"
-          required
-        />
-      </label>
-      <label for="night_supervisor">
-        Night Supervisor:
-        <input
-          type="text"
-          value="<%=night_supervisor%>"
-          name="night_supervisor"
-          required
-        />
-      </label>
-      <label for="mess_head">
-        Mess Head:
-        <input type="text" value="<%=mess_head%>" name="mess_head" required />
-      </label>
-      <button type="submit">Submit</button>
-    </form>
-    <button
-      style="
-        background-color: #282828;
-        border: 1px solid #fabd2f;
-        color: #ebdbb2;
-        padding: 20px 20px;
-        text-align: center;
-        font-size: 20px;
-        position: absolute;
-        top: 50px;
-        left: 80px;
+  <body>
+    <div id="dashboard">
+
+      <button 
+        style=
+        "position: absolute;
+        top:80px;
+        left:350px;
         border-radius: 10px;
-      "
-      onclick="window.location.href = '/super/portal';"
-    >
-      Back
-    </button>
+        width:150px;"
+        onclick="window.location.href = '/super/portal';">
+        Go Back
+      </button>
+
+      <div id="info"  style="float:none">
+      <form action="./hostel" method="POST">
+        <table border="0" cellpadding="15">
+          <tbody>
+            
+          <tr>
+            <td id="label">Hostel Num</td>
+            <td>
+              <label for="hostel_number">
+                <input disabled
+                  type="text"
+                  value="<%=hostel_number%>"
+                  name="hostel_number"
+                  required
+                />
+              </label> 
+            </td>
+          </tr>
+
+            
+          <tr>
+            <td id="label">Hostel Name</td>
+            <td>
+              <label for="hostel_name">
+                <input
+                  type="text"
+                  value="<%=hostel_name%>"
+                  name="hostel_name"
+                  required
+                />
+              </label>  
+            </td>
+          </tr>          
+
+
+          <tr>
+            <td id="label">[B]oys or [G]irls</td>
+            <td>
+              <label for="boys_girls">
+                <input type="text" value="<%=boys_girls%>" name="boys_girls" required />
+              </label>  
+            </td>
+          </tr>     
+
+
+          <tr>
+            <td id="label">Number of rooms</td>
+            <td>
+              <label for="rooms">
+                <input type="text" value="<%=rooms%>" name="rooms" required />
+              </label>  
+            </td>
+          </tr>     
+
+          <tr>
+            <td id="label">Day Supervisor</td>
+            <td>
+              <label for="day_supervisor">
+                <input
+                  type="text"
+                  value="<%=day_supervisor%>"
+                  name="day_supervisor"
+                  required
+                />
+              </label>  
+            </td>
+          </tr>     
+
+
+          <tr>
+            <td id="label">Evening Supervisor</td>
+            <td>
+              <label for="evening_supervisor">
+                <input
+                  type="text"
+                  value="<%=evening_supervisor%>"
+                  name="evening_supervisor"
+                  required
+                />
+              </label>  
+            </td>
+          </tr>     
+
+          <tr>
+            <td id="label">Night Supervisor</td>
+            <td>
+              <label for="night_supervisor">
+                <input
+                  type="text"
+                  value="<%=night_supervisor%>"
+                  name="night_supervisor"
+                  required
+                />
+              </label>  
+            </td>
+          </tr>     
+
+          <tr>
+            <td id="label">Mess Head</td>
+            <td>
+              <label for="mess_head">
+                <input type="text" value="<%=mess_head%>" name="mess_head" required />
+              </label>  
+            </td>
+          </tr>     
+
+
+          <tr>
+            <td style="text-align:center; padding: 20px 0 20px 0">
+            </td>
+            <td style="text-align:center; padding: 20px 0 20px 0">
+              <button type="submit">Save Changes</button>
+            </td>
+            </tr>
+          </tbody>
+        </table>
+      </form>
+    </div>
   </body>
 </html>
