--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,118 +1,123 @@
-h1{
-	font-size: 2rem;
-	font-family: 'Montserrat';
-	font-weight: normal;
-	color: #fff;
-	text-align: center;
-	margin: 2rem 0;
+h1 {
+  font-size: 2rem;
+  font-family: "Montserrat";
+  font-weight: normal;
+  color: #fff;
+  text-align: center;
+  margin: 2rem 0;
 }
 
-body{
-/* 	background-image: url("https://images.unsplash.com/photo-1533255431233-4eb4410ca514?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1920&h=1080&fit=crop&ixid=eyJhcHBfaWQiOjF9");
-*/	background-color: #32302f;
-	background-size:cover;
+body {
+  /* 	background-image: url("https://images.unsplash.com/photo-1533255431233-4eb4410ca514?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1920&h=1080&fit=crop&ixid=eyJhcHBfaWQiOjF9");
+*/
+  background-color: #32302f;
+  background-size: cover;
 }
 
-.wrapper{
-	width: 70%;
-	margin: 0 auto;
-	max-width: 100rem;
+body::-webkit-scrollbar {
+  display: none;
 }
 
-.cols{
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
+.wrapper {
+  width: 70%;
+  margin: 0 auto;
+  max-width: 100rem;
 }
 
-.col{
-	width: calc(30% - 2rem);
-	margin: 1rem;
-	cursor: pointer;
+.cols {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-.container{
-	transform-style: preserve-3d;
-	perspective: 1000px;
+.col {
+  width: calc(30% - 2rem);
+  margin: 1rem;
+  cursor: pointer;
 }
 
-.front{
-	background-size: cover;
-	background-position: center;
-	text-align: center;
-	min-height: 280px;
-	height: auto;
-	border-radius: 10px;
-	color: #fff;
-	font-size: 1.5rem;
+.container {
+  transform-style: preserve-3d;
+  perspective: 1000px;
 }
 
-.front:after{
-	position: absolute;
-	top: 0;
-	left: 0;
-	z-index: 1;
-	width: 100%;
-	height: 100%;
-	content: '';
-	display: block;
-	opacity: .4;
-	background-color: #000;
-	border-radius: 10px;
+.front {
+  background-size: cover;
+  background-position: center;
+  text-align: center;
+  min-height: 280px;
+  height: auto;
+  border-radius: 10px;
+  color: #fff;
+  font-size: 1.5rem;
 }
 
-.inner{
-	transform: translateY(-50%) translateZ(60px);
-	top: 50%;
-	position: absolute;
-	left: 0;
-	right:0;
-	box-sizing: border-box;
-	z-index: 2;
+.front:after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  content: "";
+  display: block;
+  opacity: 0.4;
+  background-color: #000;
+  border-radius: 10px;
 }
 
-.front .inner p{
-	font-size: 2rem;
-	margin-bottom: 2rem;
-	position: relative;
+.inner {
+  transform: translateY(-50%) translateZ(60px);
+  top: 50%;
+  position: absolute;
+  left: 0;
+  right: 0;
+  box-sizing: border-box;
+  z-index: 2;
 }
 
-.front .inner p:after{
-	content: '';
-	width: 4rem;
-	height: 2px;
-	position: absolute;
-	background: #C6D4DF;
-	display: block;
-	left: 0;
-	right: 0;
-	margin: 0 auto;
-	bottom: -.75rem;
+.front .inner p {
+  font-size: 2rem;
+  margin-bottom: 2rem;
+  position: relative;
 }
 
-.front .inner span{
-	color: rgba(255,255,255,0.7);
-	font-family: 'Montserrat';
-	font-weight: 300;
+.front .inner p:after {
+  content: "";
+  width: 4rem;
+  height: 2px;
+  position: absolute;
+  background: #c6d4df;
+  display: block;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  bottom: -0.75rem;
 }
 
-@media screen and (max-width: 64rem){
-	.col{
-		width: calc(33.333333% - 2rem);
-	}
+.front .inner span {
+  color: rgba(255, 255, 255, 0.7);
+  font-family: "Montserrat";
+  font-weight: 300;
 }
 
-@media screen and (max-width: 48rem){
-	.col{
-		width: calc(50% - 2rem);
-	}
+@media screen and (max-width: 64rem) {
+  .col {
+    width: calc(33.333333% - 2rem);
+  }
 }
 
-@media screen and (max-width: 32rem){
-	.col{
-		width: 100%;
-		margin: 0 0 2rem;
-	}
+@media screen and (max-width: 48rem) {
+  .col {
+    width: calc(50% - 2rem);
+  }
+}
+
+@media screen and (max-width: 32rem) {
+  .col {
+    width: 100%;
+    margin: 0 0 2rem;
+  }
 }
