--- a/public/css/contact-us.css
+++ b/public/css/contact-us.css
@@ -118,4 +118,11 @@ body {
     font-size: 16px;
     color: #ebdbb2;
   }
+
+  .box .details a{
+    font-size: 16px;
+    color: #ebdbb2;  
+    text-decoration: none;
+    font-family: 'Montserrat';
+  }
   
