--- a/views/projectDetails.ejs
+++ b/views/projectDetails.ejs
@@ -54,9 +54,8 @@
     #dashboard {
         display: flex;
         flex-direction: column;
-        margin-top: 50px;
-        margin-left: 50px;
-        width: 900px;
+        margin: 50px;
+        width: 1000px;
         height: 580px;
         padding: 10px;
         border: 2px solid #ebdbb2;
