--- a/views/projectDetails.ejs
+++ b/views/projectDetails.ejs
@@ -7,6 +7,9 @@
     }
 
     body {
+        display: flex;
+        align-items: center;
+        justify-content: center;
         background: var(--color2);
         font-size: 20px;
     }
