Corrected all errors

--- a/views/super/club_add.ejs
+++ b/views/super/club_add.ejs
@@ -137,6 +137,7 @@
               type="text"
               placeholder="Enter Club ID" 
               name="club_id"
+              value="<%=club_id%>"
               required
             />
           </label>
