--- a/views/super/faculty_add.ejs
+++ b/views/super/faculty_add.ejs
@@ -131,7 +131,7 @@
           <tr id="label">
             <td>Faculty ID</td>
             <td>
-                <input disabled type="text" placeholder="Enter Faculty ID" required />
+                <input disabled type="text" placeholder="Enter Faculty ID" value="<%=faculty_id%>" required />
               </label>
             </td>
           </tr>
@@ -147,7 +147,7 @@
             <td>Middle Name</td>
             <td>      
               <label for="m_name">
-              <input type="text" placeholder="Enter Middle Name" name="m_name" required />
+              <input type="text" placeholder="Enter Middle Name" name="m_name"/>
               </label>
             </td>
           </tr>
@@ -172,7 +172,7 @@
             <td>D.O.B.</td>
             <td>      
               <label for="dob">
-              <input type="text" placeholder="Enter D.O.B." name="dob" required />
+              <input type="text" placeholder="YYYYMMDD" name="dob" required />
               </label>
             </td>
           </tr>
