--- a/views/super/max_l_grades_add.ejs
+++ b/views/super/max_l_grades_add.ejs
@@ -136,6 +136,7 @@
                   type="text"
                   placeholder="Enter Subject Code"
                   name="subject_code"
+                  value="<%=subject_code%>"
                   required
                 />
               </label>  
