--- a/views/super/max_t_grades_add.ejs
+++ b/views/super/max_t_grades_add.ejs
@@ -136,6 +136,7 @@
                   type="text"
                   placeholder="Enter Subject Code"
                   name="subject_code"
+                  value="<%=subject_code%>"
                   required
                 />
               </label>  
@@ -176,7 +177,7 @@
               <label for="minor1">
                 <input
                   type="text"
-                  placeholder="Enter Mid Sem Marks"
+                  placeholder="Enter Minor 1 Marks"
                   name="minor1"
                   required
                 />
