--- a/views/super/student_add.ejs
+++ b/views/super/student_add.ejs
@@ -146,7 +146,7 @@
             <td>Middle Name</td>
             <td>      
               <label for="m_name">
-              <input type="text" value=" " placeholder="Enter Middle Name" name="m_name" required />
+              <input type="text" value=" " placeholder="Enter Middle Name" name="m_name"/>
               </label>
             </td>
           </tr>
