--- a/views/super/f_time_table.ejs
+++ b/views/super/f_time_table.ejs
@@ -159,7 +159,7 @@
             <td id="label">09:00 - 10:00</td>
             <td>
               <label for="t_9">
-                <input type="text" value="<%=t_9%>" name="t_9" required />
+                <input type="text" value="<%=t_9%>" name="t_9" />
               </label>
             </td>
           </tr>
@@ -168,7 +168,7 @@
             <td id="label">10:00 - 11:00</td>
             <td>
               <label for="t_10">
-                <input type="text" value="<%=t_10%>" name="t_10" required />
+                <input type="text" value="<%=t_10%>" name="t_10" />
               </label>
             </td>
           </tr>
@@ -177,7 +177,7 @@
             <td id="label">11:00 - 12:00</td>
             <td>
               <label for="t_11">
-                <input type="text" value="<%=t_11%>" name="t_11" required />
+                <input type="text" value="<%=t_11%>" name="t_11" />
               </label>
             </td>
           </tr>
@@ -186,7 +186,7 @@
             <td id="label">12:00 - 13:00</td>
             <td>
               <label for="t_12">
-                <input type="text" value="<%=t_12%>" name="t_12" required />
+                <input type="text" value="<%=t_12%>" name="t_12" />
               </label>
             </td>
           </tr>
@@ -195,7 +195,7 @@
             <td id="label">14:00 - 15:00</td>
             <td>
               <label for="t_2">
-                <input type="text" value="<%=t_2%>" name="t_2" required />
+                <input type="text" value="<%=t_2%>" name="t_2" />
               </label>
             </td>
           </tr>
@@ -204,7 +204,7 @@
             <td id="label">15:00 - 16:00</td>
             <td>
               <label for="t_3">
-                <input type="text" value="<%=t_3%>" name="t_3" required />
+                <input type="text" value="<%=t_3%>" name="t_3" />
               </label>
             </td>
           </tr>
@@ -213,7 +213,7 @@
             <td id="label">16:00 - 17:00</td>
             <td>
               <label for="t_4">
-                <input type="text" value="<%=t_4%>" name="t_4" required />
+                <input type="text" value="<%=t_4%>" name="t_4" />
               </label>
             </td>
           </tr>
@@ -222,7 +222,7 @@
             <td id="label">17:00 - 18:00</td>
             <td>
               <label for="t_5">
-                <input type="text" value="<%=t_5%>" name="t_5" required />
+                <input type="text" value="<%=t_5%>" name="t_5" />
               </label>
             </td>
           </tr>
