--- a/views/super/student.ejs
+++ b/views/super/student.ejs
@@ -146,7 +146,7 @@
             <td>Middle Name</td>
             <td>      
               <label for="m_name">
-              <input type="text" value="<%=m_name%>" name="m_name" required />
+              <input type="text" value="<%=m_name%>" name="m_name"/>
               </label>
             </td>
           </tr>
