Password Change added

--- a/views/admin_portal.ejs
+++ b/views/admin_portal.ejs
@@ -259,6 +259,10 @@
       </label>
       <button type="submit">Search</button>
     </form>
+    <!-- To change password -->
+    <!-- <a href="./change_password">
+      <div class="HeaderIconDiv"><i class="material-icons">settings</i></div>
+    </a> -->
     <script src="/js/script.js"></script>
   </body>
 </html>
