--- a/views/student_portal.ejs
+++ b/views/student_portal.ejs
@@ -32,7 +32,7 @@
             <!-- </div> -->
           <!-- </div> -->
           <div style="display: flex;">
-            <div class="HeaderIconDiv"><i class="material-icons">settings</i></div>
+            <a href="./s_change_password"><div class="HeaderIconDiv"><i class="material-icons">settings</i></div></a>
             <!-- <div class="HeaderIconDiv"><i class="material-icons">notifications</i></div> -->
             <!-- Profile pic is here -->
             <div class="ProfilePicDiv">
