--- a/views/change_password.ejs
+++ b/views/change_password.ejs
@@ -1,167 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
-<style>
+  <style>
     :root {
-        --color1: #282828;
-        --color2: #32302f;
-        --sfTileBorder: #ebdbb2;
+      --color1: #282828;
+      --color2: #32302f;
+      --sfTileBorder: #ebdbb2;
     }
 
     body {
-        background: var(--color2);
-        font-size: 20px;
-        color: var(--sfTileBorder);
+      background: var(--color2);
+      font-size: 20px;
+      color: var(--sfTileBorder);
     }
 
     button,
     .bt {
-        box-shadow: 0px 5px 0px 0px #282828;
-        background: linear-gradient(to bottom, #eae0c2 5%, #ccc2a6 100%);
-        background-color: #ebdbb2;
-        border-radius: 15px;
-        border: 2px solid #282828;
-        cursor: pointer;
-        color: #32302f;
-        font-family: 'Montserrat';
-        font-size: 20px;
-        padding: 12px 20px;
-        text-decoration: none;
-        text-shadow: 0px 1px 0px #ffffff;
-        width: 200px;
+      box-shadow: 0px 5px 0px 0px #282828;
+      background: linear-gradient(to bottom, #eae0c2 5%, #ccc2a6 100%);
+      background-color: #ebdbb2;
+      border-radius: 15px;
+      border: 2px solid #282828;
+      cursor: pointer;
+      color: #32302f;
+      font-family: "Montserrat";
+      font-size: 20px;
+      padding: 12px 20px;
+      text-decoration: none;
+      text-shadow: 0px 1px 0px #ffffff;
+      width: 200px;
     }
 
     button,
     .bt:hover {
-        background: linear-gradient(to bottom, #ccc2a6 5%, #ebdbb2 100%);
-        background-color: #ebdbb2;
+      background: linear-gradient(to bottom, #ccc2a6 5%, #ebdbb2 100%);
+      background-color: #ebdbb2;
     }
 
-    input[type=text] {
-        font-family: 'Montserrat';
-        font-size: 20px;
-        padding: 12px 16px;
-        margin: 8px 0;
-        box-sizing: border-box;
-        background-color: #32302f;
-        border: 1px solid #ebdbb2;
-        color: #ebdbb2;
-        border-radius: 20px;
+    input[type="text"] {
+      font-family: "Montserrat";
+      font-size: 20px;
+      padding: 12px 16px;
+      margin: 8px 0;
+      box-sizing: border-box;
+      background-color: #32302f;
+      border: 1px solid #ebdbb2;
+      color: #ebdbb2;
+      border-radius: 20px;
     }
 
     form {
-        margin-top: 0px;
-        margin-left: 300px;
+      margin-top: 0px;
+      margin-left: 300px;
     }
 
     #dashboard {
-        display: flex;
-        flex-direction: column;
-        margin: 50px;
-        width: 1000px;
-        padding: 10px;
-        border: 2px solid #ebdbb2;
-        border-radius: 15px;
-        background-color: #282828;
-        overflow: auto;
-        padding-bottom: 40px;
+      display: flex;
+      flex-direction: column;
+      margin: 50px;
+      width: 1000px;
+      padding: 10px;
+      border: 2px solid #ebdbb2;
+      border-radius: 15px;
+      background-color: #282828;
+      overflow: auto;
+      padding-bottom: 40px;
     }
 
     #photo {
-        width: 200px;
-        height: 200px;
-        margin-top: 125px;
-        margin-left: 60px;
-        border-radius: 15px;
+      width: 200px;
+      height: 200px;
+      margin-top: 125px;
+      margin-left: 60px;
+      border-radius: 15px;
     }
 
     #info {
-        font-family: 'Montserrat';
-        font-size: 20px;
-        width: 200px;
-        height: 100px;
-        margin-top: 0;
-        margin-left: 0;
+      font-family: "Montserrat";
+      font-size: 20px;
+      width: 200px;
+      height: 100px;
+      margin-top: 0;
+      margin-left: 0;
     }
 
     #label {
-        font-size: 20px;
-        font-weight: 600;
+      font-size: 20px;
+      font-weight: 600;
     }
 
     td {
-        min-width: 150px;
-        padding: 0px 20px 0px 20px;
+      min-width: 150px;
+      padding: 0px 20px 0px 20px;
     }
 
     input {
-        text-align: center;
+      text-align: center;
     }
 
     tr#label:hover {
-        background-color: rgba(0, 0, 0, 0.3);
+      background-color: rgba(0, 0, 0, 0.3);
     }
 
     a {
-        text-decoration: none;
+      text-decoration: none;
     }
 
     bt {
-        width: 200px;
-        height: 200px;
-        margin-top: 125px;
-        margin-left: 60px;
-        border-radius: 15px;
+      width: 200px;
+      height: 200px;
+      margin-top: 125px;
+      margin-left: 60px;
+      border-radius: 15px;
     }
 
     #introContainer {
-        background-color: var(--color2);
-        padding: 10px;
+      background-color: var(--color2);
+      padding: 10px;
     }
-</style>
+  </style>
 
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Admin Edit</title>
-</head>
+    <title>Password Change</title>
+  </head>
 
-<body>
+  <body>
     <div id="dashboard">
-        <div id="image" style="float:left">
-            <button style="
-          border-radius: 10px;
-          width:150px;" onclick="window.location.href = '/admin/portal';">Go Back</button>
-        </div>
-        <form action="" method="POST">
-            <table border = "0" cellpadding="3">
-                <tr>
-                    <td>Old Password</td>
-                    <td><input type="text" name="oldPassword" placeholder="Old Password"></td>
-                </tr>
-                <tr>
-                    <td>New Password</td>
-                    <td><input type="text" name="newPassword" placeholder="New Password"></td>
-                </tr>
-                <tr>
-                    <td>Confirm New Password</td>
-                    <td><input type="text" name="confirmNewPassword" placeholder="Confirm New Password"></td>
-                </tr>
-            </table>
-        </form>
+      <div id="image" style="float: left;">
+        <button
+          style="border-radius: 10px; width: 150px;"
+          onclick="window.location.href = '/';"
+        >
+          Go Back
+        </button>
+      </div>
+      <form action="<%=req%>" method="POST">
+        <table border="0" cellpadding="3">
+          <tr>
+            <td>Old Password</td>
+            <td>
+              <input
+                type="password"
+                name="password"
+                placeholder="Old Password"
+              />
+            </td>
+          </tr>
+          <tr>
+            <td>New Password</td>
+            <td>
+              <input
+                type="password"
+                name="newPassword"
+                placeholder="New Password"
+              />
+            </td>
+          </tr>
+          <tr>
+            <td>Confirm New Password</td>
+            <td>
+              <input
+                type="password"
+                name="confirmNewPassword"
+                placeholder="Confirm New Password"
+              />
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <button style="border-radius: 10px; width: 150px;" type="submit">
+                submit
+              </button>
+            </td>
+          </tr>
+        </table>
+      </form>
     </div>
-
-    <!-- Photo -->
-    <!-- <form action="./admin_edit" method="POST">
-      <label for="category">
-        <input
-          type="text"
-          value="photo"
-          name="category"
-          style="display: none;"
-        />
-      </label>
-      <button type="submit">SUBMIT</button>
-    </form> -->
-</body>
-
+  </body>
 </html>
