added change password button in admin portal

--- a/views/admin_portal.ejs
+++ b/views/admin_portal.ejs
@@ -89,6 +89,7 @@
         <li class="tablinks" onclick="admin_edit()">Admin</li>
         <li class="tablinks" onclick="club_edit()">Club</li>
         <li class="tablinks" onclick="research_edit()">Research</li>
+        <li class="tablinks" onclick="window.location.href = './change_password'">Change Password</li>
         <li class="tablinks" onclick="subjects_edit()">Subjects</li>
         <a href="./logout" style="text-decoration: none; color: #ebdbb2;"
           ><li class="tablinks">Logout</li></a
