--- a/views/faculty_portal_pages/page[0].ejs
+++ b/views/faculty_portal_pages/page[0].ejs
@@ -74,14 +74,14 @@
 <div style="display: flex; width: 100%; justify-content: space-between;">
   <div class="LeftContainer">
     <div>
-      <h1 style="color: var(--secondary);">
+      <h1 style="color: var(--sfTileBorder);">
         Hello, Dr. <%=f_name%>!<br />
         Welcome Back!
       </h1>
       <img src="/assets/man_with_laptop.png" height="150px" />
     </div>
     <div style="flex-direction: column; padding: 10px;">
-      <h2 style="align-self: center; color: var(--secondary);">
+      <h2 style="align-self: center; color: var(--sfTileBorder);">
         Class Schedule
       </h2>
       <table style="color: var(--sfTileBorder);">
@@ -100,11 +100,11 @@
       </table>
     </div>
     <div style="flex-direction: column; margin-bottom: 0px;">
-      <h2 style="align-self: center; color: var(--secondary);">
+      <h2 style="align-self: center; color: var(--sfTileBorder);">
         College News
       </h2>
       <div class="CollegeNewsDiv">
-        <p style="color: #ffffff;">02 May 2020</p>
+        <p>02 May 2020</p>
         <a
           href="https://www.iiitm.ac.in/index.php/en/component/content/category/79-latest-news?Itemid=437"
           target="_blank"
@@ -112,7 +112,7 @@
         >
       </div>
       <div class="CollegeNewsDiv">
-        <p style="color: #ffffff;">17 April 2020</p>
+        <p>17 April 2020</p>
         <a
           href="https://www.iiitm.ac.in/index.php/en/component/content/article/79-latest-news/293-notice-regarding-covid-19-dated-27th-march-2020?Itemid=437"
           target="_blank"
@@ -120,7 +120,7 @@
         >
       </div>
       <div class="CollegeNewsDiv">
-        <p style="color: #ffffff;">27 March 2020</p>
+        <p>27 March 2020</p>
         <a
           href="https://www.iiitm.ac.in/index.php/en/component/content/category/79-latest-news?Itemid=437"
           target="_blank"
@@ -128,7 +128,7 @@
         >
       </div>
       <div class="CollegeNewsDiv">
-        <p style="color: #ffffff;">19 March 2020</p>
+        <p>19 March 2020</p>
         <a
           href="https://www.iiitm.ac.in/index.php/en/component/content/article/79-latest-news/290-notice-regarding-covid-19?Itemid=437"
           target="_blank"
@@ -139,7 +139,7 @@
   </div>
   <div class="RightContainer">
     <div>
-      <h2 style="align-self: center; color: var(--secondary);">
+      <h2 style="align-self: center;">
         Upcoming Events!
       </h2>
       <div
