--- a/views/faculty_portal_pages/page[1].ejs
+++ b/views/faculty_portal_pages/page[1].ejs
@@ -8,7 +8,7 @@
 <div style="display: flex; flex-direction: column; width: 100%; height: 100%;">
   <div class="Element">
     <h3
-      style="color: var(--secondary); margin-bottom: 10px; margin-left: 150px;"
+      style=" margin-bottom: 10px; margin-left: 150px;"
     >
       ADD ASSIGNMENT <br />
     </h3>
@@ -64,7 +64,7 @@
   </div>
   <div class="Element">
     <h3
-      style="color: var(--secondary); margin-bottom: 10px; margin-left: 150px;"
+      style=" margin-bottom: 10px; margin-left: 150px;"
     >
       FACULTY ATTENDANCE
     </h3>
