student portal page color scheme

--- a/views/student_portal_pages/page[0].ejs
+++ b/views/student_portal_pages/page[0].ejs
@@ -74,7 +74,7 @@
 <div style="display: flex; width: 100%; justify-content: space-between;">
   <div class="LeftContainer">
     <div>
-      <h1 style="color: var(--secondary);">
+      <h1 >
         Hello, <%=f_name%>!<br />
         Welcome Back!
       </h1>
@@ -92,19 +92,19 @@
     >
       <i
         class="material-icons"
-        style="color: white; align-self: center; font-size: 60px;"
+        style="color: var(--sfTileBorder); align-self: center; font-size: 60px;"
         >done_all</i
       >
-      <h2 style="margin-left: 50px; margin-top: 34px; color: var(--secondary);">
+      <h2 style="margin-left: 50px; margin-top: 34px; ">
         <%=assignment_number%> are due!
       </h2>
     </div>
     <div style="flex-direction: column; margin-bottom: 0px;">
-      <h2 style="align-self: center; color: var(--secondary);">
+      <h2 style="align-self: center; ">
         College News
       </h2>
       <div class="CollegeNewsDiv">
-        <p style="color: #ffffff;">02 May 2020</p>
+        <p >02 May 2020</p>
         <a
           href="https://www.iiitm.ac.in/index.php/en/component/content/category/79-latest-news?Itemid=437"
           target="_blank"
@@ -112,7 +112,7 @@
         >
       </div>
       <div class="CollegeNewsDiv">
-        <p style="color: #ffffff;">17 April 2020</p>
+        <p >17 April 2020</p>
         <a
           href="https://www.iiitm.ac.in/index.php/en/component/content/article/79-latest-news/293-notice-regarding-covid-19-dated-27th-march-2020?Itemid=437"
           target="_blank"
@@ -120,7 +120,7 @@
         >
       </div>
       <div class="CollegeNewsDiv">
-        <p style="color: #ffffff;">27 March 2020</p>
+        <p >27 March 2020</p>
         <a
           href="https://www.iiitm.ac.in/index.php/en/component/content/category/79-latest-news?Itemid=437"
           target="_blank"
@@ -128,7 +128,7 @@
         >
       </div>
       <div class="CollegeNewsDiv">
-        <p style="color: #ffffff;">19 March 2020</p>
+        <p >19 March 2020</p>
         <a
           href="https://www.iiitm.ac.in/index.php/en/component/content/article/79-latest-news/290-notice-regarding-covid-19?Itemid=437"
           target="_blank"
@@ -139,7 +139,7 @@
   </div>
   <div class="RightContainer">
     <div>
-      <h2 style="align-self: center; color: var(--secondary);">
+      <h2 style="align-self: center;">
         Upcoming Events!
       </h2>
       <div
