--- a/views/student_portal_pages/page[1].ejs
+++ b/views/student_portal_pages/page[1].ejs
@@ -5,7 +5,6 @@
     flex-direction: column;
     width: calc(100% - 20px);
     border-radius: 1em;
-    height: 500px;
     padding-top: 10px;
     margin-bottom: 20px;
     align-items: center;
@@ -35,7 +34,7 @@
   </div>
   <div
     class="ElementS"
-    style="height: 100px; background-color: var(--sfTileBackground);"
+    style="background-color: var(--sfTileBackground);"
   >
     <h3 style="align-self: center;">GRADES</h3>
     <table style="width: 70%; color: var(--sfTileBorder);">
@@ -64,7 +63,4 @@
       </tbody>
     </table>
   </div>
-  <!-- <div class="ElementsContainer" style="background-color: var(--sfTileBackground);">
-    <h3 style="align-self: center;">DATASHEET</h3>
-  </div> -->
 </div>
