--- a/views/student_portal_pages/page[2].ejs
+++ b/views/student_portal_pages/page[2].ejs
@@ -32,7 +32,7 @@
   style="display: flex; flex-direction: column; width: 100%; padding: 10px 0px;"
 >
   <div class="ElementS" style="flex-direction: column; padding: 10px;">
-    <h2 style="align-self: center; color: var(--secondary);">
+    <h2 style="align-self: center;">
       Class Schedule
     </h2>
     <table style="width: 70%; color: var(--sfTileBorder);">
