Favicon added and title improved

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project Olly</title>
+    <title>Portal</title>
     <link rel="stylesheet" href="<%=style%>" />
+    <link rel="icon" href="../assets/IIIT_logo_dark.png" />
   </head>
   <body>
     <%-body%>
